--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
 
       <div class="container dp_container-jumbo">
         <figure class="dp_logo">
-          <img src="img/oxelo-by-decathlon.jpg?quality=70&interlace=true&format=auto" alt="Logo Oxelo By Decathlon">
+          <img src="img/logo-skateboarding.jpg?quality=70&interlace=true&format=auto" alt="Logo Decathlon Skateboarding">
         </figure>
-        <figure class="logo_carve540">
-          <img src="img/carve540-logo.png?quality=70&interlace=true&format=auto" alt="Logo Carve 540 by Decathlon">
-        </figure>
+        <div class="logo_carve540">
+          <hr>
+          <h1>for the many.</h1>
+        </div>
       </div>
       <div class="container dp_cta-btn">
-        <a class="dp_cta regular" href="https://www.decathlon.fr/lb-carve540-bird-id_8523398.html?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-carve540&type=opeco" role="button">Découvrir le produit</a>
+        <a class="dp_cta regular" href=" https://www.decathlon.fr/C-851616-planches-et-pieces-detachees?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco" role="button">Découvrir les produits</a>
       </div>
 
 
@@ -37,343 +38,202 @@
   <div class="main_content">
 
 
-    <div class="container dp_carve540">
-
-      <div class="row controls_wrapper">
-        <div class="col col-md-12 logo">
-          <figure>
-            <img src="img/carve540-logo.png" alt="Logo Carve 540 by Decathlon">
-          </figure>
-        </div>
-
-        <div class="row carve540_slider">
-
-          <!-- Board Front -->
-          <div class="row board-front carve540_slide">
-            <div class="col col-md-12 board">
-              <figure>
-                <img src="img/carve540-front.jpg" alt="Board Carve 540 - Front - by Decathlon, Oxelo">
-                <figure class="trigger">
-                  <img  src="img/trigger-blue.png" alt="Pop-up Détails - Board Carve 540 Front -By Decathlon, Oxelo">
-                </figure>
-              </figure>
-            </div>
-            <div class="col col-md-12 description">
-              <p>Les sensations du surf sur Bitume.<br> PLANCHE DE CARVING DOTEE DE TRUCKS TECHNIQUES<br> SPECIALEMENT CONCUE POUR PRENDRE DES VIRAGES <br> très serrés</p>
-            </div>
-
-
-            <div class="row pop-up_features carve540-front">
-              <div class="col-md-6 pop-up_zoom">
-                <figure>
-                  <img src="img/truck.png" alt="Zoom Truck - Oxelo - Carve 540 by Decathlon">
-                </figure>
-
-              </div>
-              <div class="col-md-6 pop-up_description">
-                <p>Nouveaux trucks techniques pour négocier<br> des courbes appuyées det des virages serrés</p>
-
-              </div>
-              <figure class="carve540_pop-up_close">
-                <img src="img/close-black.png" alt="Fermeture Pop-up Détails - Board Carve 540 Front - By Decathlon, Oxelo">
-              </figure>
-
-            </div>
-          </div>
-
-
-          <!-- Board Side -->
-          <div class="row board-side carve540_slide">
-            <div class="col col-md-12 col-lg-12 board">
-              <figure>
-                <img src="img/carve540-side.jpg" alt="Board Carve 540 - Side - by Decathlon, Oxelo">
-              </figure>
-            </div>
-            <div class="row">
-              <div class="col col-md-6 col-lg-16 description">
-                <figure>
-                  <img src="img/board-icon.jpg" alt="Carve 540 - Board icône - By Decathlon, Oxelo">
-                </figure>
-                <p>32x24 cm<br> Planche 7 plis<br> Pad de surf</p>
-              </div>
-              <div class="col col-md-6 col-lg-6 description">
-                <figure>
-                  <img src="img/wheel-icon.jpg" alt="Carve 540 - Wheel icône - By Decathlon, Oxelo">
-                </figure>
-                <p>Roues : 65mm - 78a<br> 44mm de large<br> Trucks 160mm</p>
-              </div>
-            </div>
-
-
-          </div>
-
-          <!-- Board Back -->
-          <div class="row board-back carve540_slide">
-            <div class="col col-md-12 board">
-              <figure>
-                <img src="img/carve540-back.jpg" alt="Board Carve 540 - Back - by Decathlon, Oxelo">
-                <figure class="trigger">
-                  <img  src="img/trigger-pink.png" alt="Pop-up Détails - Board Carve 540 Back - By Decathlon, Oxelo">
-                </figure>
-              </figure>
-            </div>
-            <div class="col col-md-12 description">
-              <p>Pad de surf intégré au tail. <br>Truck repositionnable pour un<br> choix de l'amplitude plus<br> ou moins prononcée</p>
-            </div>
-
-            <div class="row pop-up_features carve540-back">
-              <div class="col-md-6 pop-up_description">
-              </div>
-              <div class="col-md-6 pop-up_zoom">
-                <figure>
-                  <img src="img/grip.png" alt="Zoom - Board Carve 540 Back - By Decathlon, Oxelo">
-                </figure>
-
-              </div>
-
-              <figure class="carve540_pop-up_close">
-                <img src="img/close-black.png" alt="Fermeture Pop-up Détails - Board Carve 540 Back - By Decathlon, Oxelo">
-              </figure>
-
-            </div>
-          </div>
-          <div class="pagination"></div>
-        </div>
-
-
-
-
-      </div>
-    </div>
-
-
-    <!-- MOVIES -->
-
-    <div class="container movies">
-
-      <div class="pop-up_background">
-        <div class="pop-up pop-up_left">
-
-          <iframe class="pop-up_video"src="https://www.youtube.com/embed/4kYuEJ08eMQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <img src="img/close.png" alt="Bouton de fermeture - Pop Up Carve 540" class="pop-up_close">
-        </div>
-
-        <div class="pop-up pop-up_right">
-
-          <iframe class="pop-up_video" src="https://www.youtube.com/embed/Cbbjkccb8C0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <img src="img/close.png" alt="Bouton de fermeture - Pop Up Carve 540" class="pop-up_close">
-        </div>
-      </div>
-
-
+    <!--  BLOC 1 - Decathlon Skateboarding -->
+    <div class="container decathlon_skateboarding">
 
       <div class="row">
-        <div class="col title">
+        <div class="col col-md-12 logo">
           <figure>
-            <img src="img/movies.png" alt="Movies Title - Oxelo Carve 540 by Decathlon">
+            <img src="img/logo-skateboarding_flat.png" alt="Logo Decathlon + Skateboarding">
           </figure>
         </div>
       </div>
 
-
-
-      <!-- VIDEOS -->
-      <div class="row videos">
-
-
-        <!-- Video left -->
-        <div class="col-md-6 col-sm-12 video video_left">
-          <figure>
-            <img src="img/img-video_1.jpg" id="play-video" class="img-responsive">
-            <figcaption>Film<br>Carver 500</figcaption>
-          </figure>
-        </div>
-
-        <!-- Video right -->
-        <div class="col-md-6 col-sm-12 video video_right">
-          <figure>
-            <img src="img/img-video_2.jpg" id="play-video" class="img-responsive">
-            <figcaption>Vidéo<br>conception</figcaption>
-          </figure>
+      <div class="row description_row">
+        <div class="col-md-12 description">
+          <p>Rendre le skate plus accessible pour en faire connaitre les plaisirs au plus grand nombre.</p>
+          <p>Composée de skaters passionnés, notre équipe de conception Decathlon Skateboarding développe une gamme de produits techniques, au prix le plus accessible possible.</p>
+          <p>Découvre les produits skate 2019.</p>
         </div>
       </div>
-      <div class="row legende">
-        <p>Alex GUERRERO - Surfeur et skateur - Vendeur Skate Decathlon Valencia Alfafar</p>
+
+      <div class="nav">
+        <figure>
+          <img src="img/scroll-down.png" alt="Keep reading">
+        </figure>
+
 
       </div>
-
-      <!-- End movies -->
     </div>
 
 
-    <!-- End main content -->
-  </div>
+    <!--  BLOC 2 - Plateau -->
+    <div class="container plateau">
+
+      <!-- SLIDE 1 -->
+      <div class="row board" id="board_1">
+        <div class="row title">
+          <div class="col-md-12">
+            <h3>Un plateau standard</h3>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <figure>
+            <img src="img/board-nude.png" alt="">
+          </figure>
+        </div>
+      </div>
+
+      <!-- SLIDE 2 -->
+      <div class="row board" id="board_2">
+        <div class="row title">
+          <div class="col-md-12">
+            <h3>L'essentiel au meilleur prix</h3>
+          </div>
+        </div>
+        <div class="col-md-12">
+          <figure>
+            <img src="img/board-nude-2.png" alt="">
+            <p>Parce qu'un pli teinté coûte plus cher qu'un pli non teinté, et qu'il n'apporte aucun plus technique, nous avons décidé de ne pas en mettre sur la DECK100</p>
+          </figure>
+        </div>
 
 
+      </div>
 
-  <!-- PARRALAX -->
-
-  <div class="parallax">
-    <div class="parallax_bg">
     </div>
-  </div>
-
-  <div class="slider_product">
-    <div class="container ">
 
 
-      <!-- SLIDE N01 - CARVE 540 -->
+    <!-- PARALLAX -->
 
-      <div class="row product_slide carve540">
-        <div class="col-md-6 product_img" >
-          <figure class="product">
-            <img src="img/carve540-slider.png" alt="Carve 540, by Decathlon">
-          </figure>
-          <figure class="background">
-            <img src="img/background-tache-carve540.png" alt="Background img - Carve 540 by Decathlon, Oxelo">
-          </figure>
+    <div class="container parallax">
+
+    </div>
+
+
+
+
+    <div class="slider_products">
+      <div class="container ">
+
+
+        <!-- SLIDE N01 - DECK 100 -->
+
+        <div class="row product_slide deck100">
+
+          <div class="col-md-6 left" >
+            <figure class="product">
+              <img src="img/8,5.png" alt="8,5 Skateboard">
+            </figure>
+            <div class="product_price">
+              <span>99€</span>
+            </div>
+            <div class="product-cta">
+              <a class="dp_cta" href="https://www.decathlon.fr/C-851616-planches-et-pieces-detachees/N-537570-type-de-produit~deck/N-537586-prix~de-25-a-30~euros?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco">Acheter le produit</a>
+            </div>
+          </div>
+
+          <div class="col-md-6 right" >
+            <div class="product_info">
+              <h3>_ DECK 100</h3>
+              <p>Une deck nue à moindre coût,<br> l'essentiel au meilleur prix</p>
+              <div class="product_features">
+                <span class="italic">Canadian Mapple</span>
+                <span class="italic">Concave Medium</span>
+                <span class="italic">Tail & Nose Larges</span>
+              </div>
+
+            </div>
+            <div class="product_size">
+              <span class="size italic" id="size_1">7.75"</span>
+              <span class="size italic" id="size_2">8"</span>
+              <span class="size italic" id="size_3">8.25"</span>
+              <span class="size italic" id="size_4">8.5"</span>
+              <span class="size italic" id="size_5">8.75"</span>
+
+            </div>
+            <div class="product_video">
+              <iframe src="https://www.youtube.com/embed/v8-Jv9sQG0c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+          </div>
+
         </div>
 
-        <div class="col-md-6 product_info" >
-          <div class="logos">
-            <figure>
-              <img src="img/carve540-logo.png" alt="Logo Carve 540 by Decahtlon, Oxelo">
+
+
+        <!-- SLIDE N02 - ROUES -->
+        <div class="row product_slide roues">
+          <div class="col-md-6 left" >
+            <figure class="product">
+              <img src="img/roues.png" alt="8,5 Skateboard">
             </figure>
-            <figure class="oxelo_logo">
-              <img src="img/oxelo-logo.png" alt="Logo Oxelo, by Decathlon">
-            </figure>
+            <div class="product_price">
+              <span>20€</span>
+            </div>
+            <div class="product-cta">
+              <a class="dp_cta" href="https://www.decathlon.fr/C-851616-planches-et-pieces-detachees/N-537570-type-de-produit~roue/N-537586-prix~de-16-a-20~euros?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco">Acheter le produit</a>
+            </div>
           </div>
-          <div class="product_price">
-            <span>99€</span>
-          </div>
-          <div class="product-cta">
-            <a class="dp_cta" href="https://www.decathlon.fr/lb-carve540-bird-id_8523398.html?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-carve540&type=opeco">Acheter le produit</a>
-          </div>
-          <div class="social">
-            <a href="#">
-              <figure>
-                <img src="img/insta.png" alt="Oxelo - Instagram">
-              </figure>
-            </a>
-            <a href="#">
-              <figure>
-                <img src="img/facebook.png" alt="Oxelo - Facebook">
-              </figure>
-            </a>
-            <a href="#">
-              <figure>
-                <img src="img/youtube.png" alt="Oxelo - Youtube">
-              </figure>
-            </a>
+
+          <div class="col-md-6 right" >
+            <div class="product_info">
+              <h3>_ ROUES 52 / 54 mm</h3>
+              <p>Roues polyvalentes et rapides,<br> disponibles en 2 tailles.</p>
+              <div class="product_features">
+                <span class="italic">Super High Rebound</span>
+                <span class="italic">52 ou 54mm</span>
+                <span class="italic">101A</span>
+              </div>
+
+            </div>
+            <div class="product_video">
+              <iframe src="https://www.youtube.com/embed/v8-Jv9sQG0c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
 
           </div>
+
         </div>
 
-      </div>
 
 
 
-      <!-- SLIDE N02 - FREE 520 -->
-      <div class="row product_slide free520">
+        <!-- SLIDE N03 - ACCESSOIRES -->
 
-        <div class="col-md-6 product_img" >
-          <figure class="product">
-            <img src="img/free520-slider.png" alt="Free 520 by Decathlon, Oxelo">
-          </figure>
-          <figure class="background">
-            <img src="img/background-tache-free520.png" alt="Background img - Free 520 by Decathlon, Oxelo">
-          </figure>
-        </div>
+        <div class="row product_slide accessoires">
 
-        <div class="col-md-6 product_info" >
-          <div class="logos">
-            <figure>
-              <img src="img/free520-logo.png" alt="Logo Free 520 by Decathlon, Oxelo">
+          <div class="col-md-6 left" >
+            <figure class="product">
+              <img src="img/roues.png" alt="8,5 Skateboard">
             </figure>
-            <figure class="oxelo_logo">
-              <img src="img/oxelo-logo.png" alt="Logo Oxelo, by Decathlon">
-            </figure>
+            <div class="product_price">
+              <span>20€</span>
+            </div>
+            <div class="product-cta">
+              <a class="dp_cta" href="https://www.decathlon.fr/C-851616-planches-et-pieces-detachees/N-537570-type-de-produit~roue/N-537586-prix~de-16-a-20~euros?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco">Acheter le produit</a>
+            </div>
           </div>
-          <div class="product_price">
-            <span>110€</span>
-          </div>
-          <div class="product-cta">
-            <a class="dp_cta" href="https://www.decathlon.fr/lb-free520-japan-id_8506101.html?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-carve540&type=opeco">Acheter le produit</a>
-          </div>
-          <div class="social">
-            <a href="#">
-              <figure>
-                <img src="img/insta.png" alt="Oxelo - Instagram">
-              </figure>
-            </a>
-            <a href="#">
-              <figure>
-                <img src="img/facebook.png" alt="Oxelo - Facebook">
-              </figure>
-            </a>
-            <a href="#">
-              <figure>
-                <img src="img/youtube.png" alt="Oxelo - Youtube">
-              </figure>
-            </a>
+
+          <div class="col-md-6 right" >
+            <div class="product_info">
+              <h3>_ ROUES 52 / 54 mm</h3>
+              <p>Roues polyvalentes et rapides,<br> disponibles en 2 tailles.</p>
+              <div class="product_features">
+                <span class="italic">Super High Rebound</span>
+                <span class="italic">52 ou 54mm</span>
+                <span class="italic">101A</span>
+              </div>
+
+            </div>
+            <div class="product_video">
+              <iframe src="https://www.youtube.com/embed/v8-Jv9sQG0c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
 
           </div>
-        </div>
 
-      </div>
-
-
-
-
-      <!-- SLIDE N03 - PINTAIL 520 -->
-      <div class="row product_slide pintail520">
-
-        <div class="col-md-6 product_img" >
-          <figure class="product">
-            <img src="img/pintail520-slider.png" alt="Pintail 520, by Decathlon">
-          </figure>
-          <figure class="background">
-            <img src="img/background-tache-pintail520.png" alt="Background img - Pintail 520 by Decathlon, Oxelo">
-          </figure>
-        </div>
-
-        <div class="col-md-6 product_info" >
-          <div class="logos">
-            <figure>
-              <img src="img/pintail520-logo.png" alt="Logo Pintail 520, by Decathlon">
-            </figure>
-            <figure class="oxelo_logo">
-              <img src="img/oxelo-logo.png" alt="Logo Oxelo, by Decathlon">
-            </figure>
-          </div>
-          <div class="product_price">
-            <span>90€</span>
-          </div>
-          <div class="product-cta">
-            <a class="dp_cta" href="https://www.decathlon.fr/lb-pintail-520-gradiant-id_8542242.html?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-carve540&type=opeco">Acheter le produit</a>
-          </div>
-          <div class="social">
-            <a href="#">
-              <figure>
-                <img src="img/insta.png" alt="Oxelo - Instagram">
-              </figure>
-            </a>
-            <a href="#">
-              <figure>
-                <img src="img/facebook.png" alt="Oxelo - Facebook">
-              </figure>
-            </a>
-            <a href="#">
-              <figure>
-                <img src="img/youtube.png" alt="Oxelo - Youtube">
-              </figure>
-            </a>
-
-          </div>
         </div>
 
       </div>
-
     </div>
   </div>
 
