--- a/index.html
+++ b/index.html
@@ -122,8 +122,20 @@
         <div class="row product_slide deck100">
 
           <div class="col-md-6 left" >
-            <figure class="product">
-              <img src="img/8,5.png" alt="8,5 Skateboard">
+            <figure class="product_img 775">
+              <img src="img/7,75.png" alt="7,75 Deck 100 Skateboard">
+            </figure>
+            <figure class="product_img 8">
+              <img src="img/8.png" alt="8 Deck 100 Skateboard">
+            </figure>
+            <figure class="product_img 825">
+              <img src="img/8,25.png" alt="8,25 Deck 100 Skateboard">
+            </figure>
+            <figure class="product_img 85">
+              <img src="img/8,5.png" alt="8,5 Deck 100 Skateboard">
+            </figure>
+            <figure class="product_img 875">
+              <img src="img/8,75.png" alt="8,75 Deck 100 Skateboard">
             </figure>
             <div class="product_price">
               <span>99€</span>
@@ -165,7 +177,7 @@
         <!-- SLIDE N02 - ROUES -->
         <div class="row product_slide roues">
           <div class="col-md-6 left" >
-            <figure class="product">
+            <figure class="product_img">
               <img src="img/roues.png" alt="8,5 Skateboard">
             </figure>
             <div class="product_price">
@@ -203,45 +215,83 @@
         <div class="row product_slide accessoires">
 
           <div class="col-md-6 left" >
-            <figure class="product">
-              <img src="img/roues.png" alt="8,5 Skateboard">
-            </figure>
-            <div class="product_price">
-              <span>20€</span>
+
+            <div class="product trucks">
+              <figure class="product_img">
+                <img src="img/trucks.png" alt="8,5 Skateboard">
+              </figure>
+              <div class="product_price">
+                <span>20€</span>
+              </div>
             </div>
-            <div class="product-cta">
-              <a class="dp_cta" href="https://www.decathlon.fr/C-851616-planches-et-pieces-detachees/N-537570-type-de-produit~roue/N-537586-prix~de-16-a-20~euros?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco">Acheter le produit</a>
+
+            <div class="product tool">
+              <figure class="product_img">
+                <img src="img/tool.png" alt="8,5 Skateboard">
+              </figure>
+              <div class="product_price">
+                <span>9€</span>
+              </div>
             </div>
+
+
           </div>
 
           <div class="col-md-6 right" >
             <div class="product_info">
-              <h3>_ ROUES 52 / 54 mm</h3>
-              <p>Roues polyvalentes et rapides,<br> disponibles en 2 tailles.</p>
-              <div class="product_features">
-                <span class="italic">Super High Rebound</span>
-                <span class="italic">52 ou 54mm</span>
-                <span class="italic">101A</span>
-              </div>
-
-            </div>
-            <div class="product_video">
-              <iframe src="https://www.youtube.com/embed/v8-Jv9sQG0c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <h3>_ ACCESSOIRES</h3>
             </div>
 
+            <div class="product vis">
+            <figure class="product_img">
+              <img src="img/vis.png" alt="Visserie Deck 100 - Decathlon">
+            </figure>
+            <div class="product_price">
+              <span>3€</span>
+            </div>
           </div>
 
+          <div class="product grip">
+            <figure class="product_img ">
+              <img src="img/grip.png" alt="Grip Deck 100 - Decathlon">
+            </figure>
+            <div class="product_price">
+              <span>6€</span>
+            </div>
+          </div>
+
+          <div class="product-cta">
+            <a class="dp_cta" href="https://www.decathlon.fr/C-932201-accessoires?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco">Acheter le produit</a>
+          </div>
         </div>
 
       </div>
+
     </div>
   </div>
 
 
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.js"
-  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-  crossorigin="anonymous"></script>
-  <script src="js/main.js"></script>
+
+
+  <div class="greetings">
+    <figure>
+      <img src="img/greetings.png" alt="Greetings From Lille - Decathlon">
+    </figure>
+    <ul>
+      <li position="0" class="puce active"></li>
+      <li position="1" class="puce"></li>
+      <li position="2" class="puce"></li>
+      <li position="3"class="puce" ></li>
+    </ul>
+  </div>
+
+</div>
+
+
+<script
+src="https://code.jquery.com/jquery-3.3.1.js"
+integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+crossorigin="anonymous"></script>
+<script src="js/main.js"></script>
 
 </div>
