90% - Manque responsive & anim bloc photos

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
     <!--  BLOC 2 - Plateau -->
-    <div class="container plateau">
+    <div class="container features">
 
       <!-- SLIDE 1 -->
       <div class="row board" id="board_1">
@@ -243,55 +243,244 @@
             </div>
 
             <div class="product vis">
-            <figure class="product_img">
-              <img src="img/vis.png" alt="Visserie Deck 100 - Decathlon">
-            </figure>
-            <div class="product_price">
-              <span>3€</span>
+              <figure class="product_img">
+                <img src="img/vis.png" alt="Visserie Deck 100 - Decathlon">
+              </figure>
+              <div class="product_price">
+                <span>3€</span>
+              </div>
+            </div>
+
+            <div class="product grip">
+              <figure class="product_img ">
+                <img src="img/grip.png" alt="Grip Deck 100 - Decathlon">
+              </figure>
+              <div class="product_price">
+                <span>6€</span>
+              </div>
+            </div>
+
+            <div class="product-cta">
+              <a class="dp_cta" href="https://www.decathlon.fr/C-932201-accessoires?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco">Acheter le produit</a>
             </div>
           </div>
 
-          <div class="product grip">
-            <figure class="product_img ">
-              <img src="img/grip.png" alt="Grip Deck 100 - Decathlon">
-            </figure>
-            <div class="product_price">
-              <span>6€</span>
-            </div>
-          </div>
-
-          <div class="product-cta">
-            <a class="dp_cta" href="https://www.decathlon.fr/C-932201-accessoires?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco">Acheter le produit</a>
-          </div>
         </div>
 
       </div>
+    </div>
+
+
+
+    <!-- GREETING -->
+    <div class="greetings">
+      <figure>
+        <img src="img/greetings.png" alt="Greetings From Lille - Decathlon">
+      </figure>
+      <ul>
+        <li position="0" class="puce active"></li>
+        <li position="1" class="puce"></li>
+        <li position="2" class="puce"></li>
+        <li position="3"class="puce" ></li>
+      </ul>
+    </div>
+
+
+
+    <!-- BOARD SIZES -->
+
+    <div class="container_fluid board_size">
+      <div class="row">
+        <div class="col-md-2 product ">
+          <div class="product_img">
+            <figure>
+              <img src="img/deck120_775.png" alt="Deck 120 - Decathlon - 7,75">
+            </figure>
+          </div>
+
+          <div class="size ">
+            <span class="size_775">7,75"</span>
+          </div>
+        </div>
+
+        <div class="col-md-2 product ">
+          <div class="product_img">
+            <figure>
+              <img src="img/deck120_800.png" alt="Deck 120 - Decathlon - 8">
+            </figure>
+          </div>
+
+          <div class="size ">
+            <span class="size_800">8"</span>
+          </div>
+        </div>
+
+        <div class="col-md-2 product">
+          <div class="product_img">
+            <figure>
+              <img src="img/deck120_825.png" alt="Deck 120 - Decathlon - 8,25">
+            </figure>
+          </div>
+
+          <div class="size ">
+            <span class="size_825">8,25"</span>
+          </div>
+        </div>
+
+        <div class="col-md-2 product ">
+          <div class="product_img">
+            <figure>
+              <img src="img/deck120_850.png" alt="Deck 120 - Decathlon - 8,5">
+            </figure>
+          </div>
+
+          <div class="size ">
+            <span class="size_850">8,5"</span>
+          </div>
+        </div>
+
+        <div class="col-md-2 product ">
+          <div class=" product_img">
+            <figure>
+              <img src="img/deck120_875.png" alt="Deck 120 - Decathlon - 8,75">
+            </figure>
+          </div>
+
+          <div class="size">
+            <span class="size_875">8,75"</span>
+          </div>
+        </div>
+      </div>
 
     </div>
+
+    <!-- DECK 120 -->
+
+    <div class="deck120">
+      <div class="container">
+
+        <div class="row product_slide deck120">
+
+          <div class="col-md-6 left" >
+            <figure class="product_img 775">
+              <img src="img/deck120_775.png" alt="7,75 Deck 100 Skateboard">
+            </figure>
+            <div class="product_price">
+              <span>35€</span>
+            </div>
+            <div class="product-cta">
+              <a class="dp_cta" href="https://www.decathlon.fr/C-851616-planches-et-pieces-detachees/N-537570-type-de-produit~deck/N-537586-prix~de-29-a-35~euros?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco">Acheter le produit</a>
+            </div>
+          </div>
+
+          <div class="col-md-6 right" >
+            <div class="product_info">
+              <h3>_ DECK 120</h3>
+              <p>Cette édition "Greetings from Lille" rend <br>hommage à quelques spots Lillois.</p>
+              <div class="product_features">
+                <span class="italic">7 plis d'érable canadien</span>
+                <span class="italic">Concave Medium</span>
+                <span class="italic">Tail & Nose Larges</span>
+              </div>
+
+            </div>
+            <div class="product_size">
+              <span class="size italic" id="size_1">7.75"</span>
+              <span class="size italic" id="size_2">8"</span>
+              <span class="size italic" id="size_3">8.25"</span>
+              <span class="size italic" id="size_4">8.5"</span>
+              <span class="size italic" id="size_5">8.75"</span>
+
+            </div>
+            <div class="product_video">
+              <iframe src="https://www.youtube.com/embed/v8-Jv9sQG0c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+          </div>
+
+        </div>
+
+
+      </div>
+    </div>
+
+    <div class="container_fluid photos">
+      <div class="row">
+        <figure id="photo_1">
+          <img src="img/highway.jpg" alt="">
+        </figure>
+        <figure id="photo_2">
+          <img src="img/bowl.jpg" alt="">
+        </figure>
+        <figure id="photo_3">
+          <img src="img/wzm6x7.jpg" alt="">
+        </figure>
+        <figure id="photo_4">
+          <img src="img/wzm.jpg" alt="">
+        </figure>
+        <figure id="photo_5">
+          <img src="img/Alexis_Thomas_roues_029.jpg" alt="">
+        </figure>
+        <figure id="photo_6">
+          <img src="img/fish.jpg" alt="">
+        </figure>
+      </div>
+
+
+    </div>
+
+  </div>
+
+  <div class="container shop">
+    <div class="row title">
+      <div class="col-md-12">
+        <h3>_ Découvre aussi</h3>
+      </div>
+    </div>
+    <div class="row product">
+      <div class="col-md-6 product_img">
+
+        <figure>
+          <img src="img/vulca500.png" alt="">
+        </figure>
+      </div>
+      <div class="col-md-6 product_info">
+        <h4>_ VULCA500</h4>
+        <div class="product_price">
+          <span>35€</span>
+        </div>
+        <div class="product-cta">
+          <a class="dp_cta" href="https://www.decathlon.fr/C-851617-chaussures-de-skate/N-537893-taille~43/N-537895-prix~de-30-a-35~euros?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco ">Acheter le produit</a>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="row product">
+      <div class="col-md-6 product_img">
+        <figure>
+          <img src="img/crush500.png" alt="">
+        </figure>
+      </div>
+      <div class="col-md-6 product_info">
+        <h4>_ CRUSH500</h4>
+        <div class="product_price">
+          <span>38€</span>
+        </div>
+        <div class="product-cta">
+          <a class="dp_cta" href="https://www.decathlon.fr/C-851617-chaussures-de-skate/N-537893-taille~43/N-537895-prix~de-37-a-38~euros?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco">Acheter le produit</a>
+        </div>
+      </div>
+
+    </div>
+
   </div>
 
 
-
-
-  <div class="greetings">
-    <figure>
-      <img src="img/greetings.png" alt="Greetings From Lille - Decathlon">
-    </figure>
-    <ul>
-      <li position="0" class="puce active"></li>
-      <li position="1" class="puce"></li>
-      <li position="2" class="puce"></li>
-      <li position="3"class="puce" ></li>
-    </ul>
-  </div>
-
-</div>
-
-
-<script
-src="https://code.jquery.com/jquery-3.3.1.js"
-integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-crossorigin="anonymous"></script>
-<script src="js/main.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
+  <script src="js/main.js"></script>
 
 </div>
