--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <figure class="dp_logo">
           <img src="img/logo-skateboarding.jpg?quality=70&interlace=true&format=auto" alt="Logo Decathlon Skateboarding">
         </figure>
-        <div class="logo_carve540">
+        <div class="title">
           <hr>
           <h1>for the many.</h1>
         </div>
@@ -419,7 +419,7 @@
           <img src="img/wzm.jpg" alt="">
         </figure>
         <figure id="photo_5">
-          <img src="img/Alexis_Thomas_roues_029.jpg" alt="">
+          <img src="img/alexis_thomas_roues_029.jpg" alt="">
         </figure>
         <figure id="photo_6">
           <img src="img/fish.jpg" alt="">
