Retour Done - Slider Greetings + white background + pic in jpg

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="col-md-12">
           <figure>
-            <img src="img/board-nude.png" alt="">
+            <img src="img/board-nude.jpg" alt="">
           </figure>
         </div>
       </div>
@@ -93,7 +93,7 @@
         </div>
         <div class="col-md-12">
           <figure>
-            <img src="img/board-nude-2.png" alt="">
+            <img src="img/board-nude-2.jpg" alt="">
             <p>Parce qu'un pli teinté coûte plus cher qu'un pli non teinté, et qu'il n'apporte aucun plus technique, nous avons décidé de ne pas en mettre sur la DECK100</p>
           </figure>
         </div>
@@ -123,19 +123,19 @@
 
           <div class="col-md-6 left" >
             <figure class="product_img 775">
-              <img src="img/7,75.png" alt="7,75 Deck 100 Skateboard">
+              <img src="img/7,75.jpg" alt="7,75 Deck 100 Skateboard">
             </figure>
             <figure class="product_img 8">
-              <img src="img/8.png" alt="8 Deck 100 Skateboard">
+              <img src="img/8.jpg" alt="8 Deck 100 Skateboard">
             </figure>
             <figure class="product_img 825">
-              <img src="img/8,25.png" alt="8,25 Deck 100 Skateboard">
+              <img src="img/8,25.jpg" alt="8,25 Deck 100 Skateboard">
             </figure>
             <figure class="product_img 85">
-              <img src="img/8,5.png" alt="8,5 Deck 100 Skateboard">
+              <img src="img/8,5.jpg" alt="8,5 Deck 100 Skateboard">
             </figure>
             <figure class="product_img 875">
-              <img src="img/8,75.png" alt="8,75 Deck 100 Skateboard">
+              <img src="img/8,75.jpg" alt="8,75 Deck 100 Skateboard">
             </figure>
             <div class="product_price">
               <span>99€</span>
@@ -200,7 +200,7 @@
 
             </div>
             <div class="product_video">
-              <iframe src="https://www.youtube.com/embed/v8-Jv9sQG0c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe src="https://www.youtube.com/embed/LP38Tw6l9Bo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
           </div>
@@ -277,12 +277,27 @@
       <figure>
         <img src="img/greetings.png" alt="Greetings From Lille - Decathlon">
       </figure>
-      <ul>
-        <li position="0" class="puce active"></li>
-        <li position="1" class="puce"></li>
-        <li position="2" class="puce"></li>
-        <li position="3"class="puce" ></li>
-      </ul>
+
+
+      <div class='slider'>
+        <div class='slider-items-container'>
+          <div class='slider-item'>
+            <img src='img/greetings_1.jpg' />
+          </div>
+          <div class='slider-item'>
+            <img src='img/greetings_2.jpg' />
+          </div>
+          <div class='slider-item'>
+            <img src='img/greetings_3.jpg' />
+          </div>
+          <div class='slider-item'>
+            <img src='img/greetings_4.jpg' />
+          </div>
+        </div>
+        <div class='dots'>
+
+        </div>
+      </div>
     </div>
 
 
@@ -294,7 +309,7 @@
         <div class="col-md-2 product ">
           <div class="product_img">
             <figure>
-              <img src="img/deck120_775.png" alt="Deck 120 - Decathlon - 7,75">
+              <img src="img/deck120_775.jpg" alt="Deck 120 - Decathlon - 7,75">
             </figure>
           </div>
 
@@ -306,7 +321,7 @@
         <div class="col-md-2 product ">
           <div class="product_img">
             <figure>
-              <img src="img/deck120_800.png" alt="Deck 120 - Decathlon - 8">
+              <img src="img/deck120_800.jpg" alt="Deck 120 - Decathlon - 8">
             </figure>
           </div>
 
@@ -318,7 +333,7 @@
         <div class="col-md-2 product">
           <div class="product_img">
             <figure>
-              <img src="img/deck120_825.png" alt="Deck 120 - Decathlon - 8,25">
+              <img src="img/deck120_825.jpg" alt="Deck 120 - Decathlon - 8,25">
             </figure>
           </div>
 
@@ -330,7 +345,7 @@
         <div class="col-md-2 product ">
           <div class="product_img">
             <figure>
-              <img src="img/deck120_850.png" alt="Deck 120 - Decathlon - 8,5">
+              <img src="img/deck120_850.jpg" alt="Deck 120 - Decathlon - 8,5">
             </figure>
           </div>
 
@@ -342,7 +357,7 @@
         <div class="col-md-2 product ">
           <div class=" product_img">
             <figure>
-              <img src="img/deck120_875.png" alt="Deck 120 - Decathlon - 8,75">
+              <img src="img/deck120_875.jpg" alt="Deck 120 - Decathlon - 8,75">
             </figure>
           </div>
 
@@ -363,7 +378,19 @@
 
           <div class="col-md-6 left" >
             <figure class="product_img 775">
-              <img src="img/deck120_775.png" alt="7,75 Deck 100 Skateboard">
+              <img src="img/deck120_775.jpg" alt="7,75 Deck 100 Skateboard">
+            </figure>
+            <figure class="product_img 800">
+              <img src="img/deck120_800.jpg" alt="7,75 Deck 100 Skateboard">
+            </figure>
+            <figure class="product_img 825">
+              <img src="img/deck120_825.jpg" alt="7,75 Deck 100 Skateboard">
+            </figure>
+            <figure class="product_img 850">
+              <img src="img/deck120_850.jpg" alt="7,75 Deck 100 Skateboard">
+            </figure>
+            <figure class="product_img 875">
+              <img src="img/deck120_875.jpg" alt="7,75 Deck 100 Skateboard">
             </figure>
             <div class="product_price">
               <span>35€</span>
@@ -376,7 +403,7 @@
           <div class="col-md-6 right" >
             <div class="product_info">
               <h3>_ DECK 120</h3>
-              <p>Cette édition "Greetings from Lille" rend <br>hommage à quelques spots Lillois.</p>
+              <p>Cette édition "Greetings from Lille" rend hommage à quelques spots Lillois.</p>
               <div class="product_features">
                 <span class="italic">7 plis d'érable canadien</span>
                 <span class="italic">Concave Medium</span>
