--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="col col-md-12 logo">
           <figure>
-            <img src="img/logo-skateboarding_flat.png" alt="Logo Decathlon + Skateboarding">
+            <img src="img/logo-skateboarding_flat.png?quality=70&interlace=true&format=auto" alt="Logo Decathlon + Skateboarding">
           </figure>
         </div>
       </div>
@@ -79,7 +79,7 @@
         </div>
         <div class="col-md-12">
           <figure>
-            <img src="img/board-nude.jpg" alt="">
+            <img src="img/board-nude.jpg?quality=70&interlace=true&format=auto" alt="">
           </figure>
         </div>
       </div>
@@ -123,19 +123,19 @@
 
           <div class="col-md-6 left" >
             <figure class="product_img 775">
-              <img src="img/7,75.jpg" alt="7,75 Deck 100 Skateboard">
+              <img src="img/7,75.jpg?quality=70&interlace=true&format=auto" alt="7,75 Deck 100 Skateboard">
             </figure>
             <figure class="product_img 8">
-              <img src="img/8.jpg" alt="8 Deck 100 Skateboard">
+              <img src="img/8.jpg?quality=70&interlace=true&format=auto" alt="8 Deck 100 Skateboard">
             </figure>
             <figure class="product_img 825">
-              <img src="img/8,25.jpg" alt="8,25 Deck 100 Skateboard">
+              <img src="img/8,25.jpg?quality=70&interlace=true&format=auto" alt="8,25 Deck 100 Skateboard">
             </figure>
             <figure class="product_img 85">
-              <img src="img/8,5.jpg" alt="8,5 Deck 100 Skateboard">
+              <img src="img/8,5.jpg?quality=70&interlace=true&format=auto" alt="8,5 Deck 100 Skateboard">
             </figure>
             <figure class="product_img 875">
-              <img src="img/8,75.jpg" alt="8,75 Deck 100 Skateboard">
+              <img src="img/8,75.jpg?quality=70&interlace=true&format=auto" alt="8,75 Deck 100 Skateboard">
             </figure>
             <div class="product_price">
               <span>99€</span>
@@ -178,7 +178,7 @@
         <div class="row product_slide roues">
           <div class="col-md-6 left" >
             <figure class="product_img">
-              <img src="img/roues.png" alt="8,5 Skateboard">
+              <img src="img/roues.png?quality=70&interlace=true&format=auto" alt="8,5 Skateboard">
             </figure>
             <div class="product_price">
               <span>20€</span>
@@ -218,7 +218,7 @@
 
             <div class="product trucks">
               <figure class="product_img">
-                <img src="img/trucks.png" alt="8,5 Skateboard">
+                <img src="img/trucks.png?quality=70&interlace=true&format=auto" alt="8,5 Skateboard">
               </figure>
               <div class="product_price">
                 <span>20€</span>
@@ -227,7 +227,7 @@
 
             <div class="product tool">
               <figure class="product_img">
-                <img src="img/tool.png" alt="8,5 Skateboard">
+                <img src="img/tool.png?quality=70&interlace=true&format=auto" alt="8,5 Skateboard">
               </figure>
               <div class="product_price">
                 <span>9€</span>
@@ -244,7 +244,7 @@
 
             <div class="product vis">
               <figure class="product_img">
-                <img src="img/vis.png" alt="Visserie Deck 100 - Decathlon">
+                <img src="img/vis.png?quality=70&interlace=true&format=auto" alt="Visserie Deck 100 - Decathlon">
               </figure>
               <div class="product_price">
                 <span>3€</span>
@@ -253,7 +253,7 @@
 
             <div class="product grip">
               <figure class="product_img ">
-                <img src="img/grip.png" alt="Grip Deck 100 - Decathlon">
+                <img src="img/grip.png?quality=70&interlace=true&format=auto" alt="Grip Deck 100 - Decathlon">
               </figure>
               <div class="product_price">
                 <span>6€</span>
@@ -275,23 +275,23 @@
     <!-- GREETING -->
     <div class="greetings">
       <figure>
-        <img src="img/greetings.png" alt="Greetings From Lille - Decathlon">
+        <img src="img/greetings.png?quality=70&interlace=true&format=auto" alt="Greetings From Lille - Decathlon">
       </figure>
 
 
       <div class='slider'>
         <div class='slider-items-container'>
           <div class='slider-item'>
-            <img src='img/greetings_1.jpg' />
+            <img src='img/greetings_1.jpg?quality=70&interlace=true&format=auto' />
           </div>
           <div class='slider-item'>
-            <img src='img/greetings_2.jpg' />
+            <img src='img/greetings_2.jpg?quality=70&interlace=true&format=auto' />
           </div>
           <div class='slider-item'>
-            <img src='img/greetings_3.jpg' />
+            <img src='img/greetings_3.jpg?quality=70&interlace=true&format=auto' />
           </div>
           <div class='slider-item'>
-            <img src='img/greetings_4.jpg' />
+            <img src='img/greetings_4.jpg?quality=70&interlace=true&format=auto' />
           </div>
         </div>
         <div class='dots'>
@@ -309,7 +309,7 @@
         <div class="col-md-2 product ">
           <div class="product_img">
             <figure>
-              <img src="img/deck120_775.jpg" alt="Deck 120 - Decathlon - 7,75">
+              <img src="img/deck120_775.jpg?quality=70&interlace=true&format=auto" alt="Deck 120 - Decathlon - 7,75">
             </figure>
           </div>
 
@@ -321,7 +321,7 @@
         <div class="col-md-2 product ">
           <div class="product_img">
             <figure>
-              <img src="img/deck120_800.jpg" alt="Deck 120 - Decathlon - 8">
+              <img src="img/deck120_800.jpg?quality=70&interlace=true&format=auto" alt="Deck 120 - Decathlon - 8">
             </figure>
           </div>
 
@@ -333,7 +333,7 @@
         <div class="col-md-2 product">
           <div class="product_img">
             <figure>
-              <img src="img/deck120_825.jpg" alt="Deck 120 - Decathlon - 8,25">
+              <img src="img/deck120_825.jpg?quality=70&interlace=true&format=auto" alt="Deck 120 - Decathlon - 8,25">
             </figure>
           </div>
 
@@ -345,7 +345,7 @@
         <div class="col-md-2 product ">
           <div class="product_img">
             <figure>
-              <img src="img/deck120_850.jpg" alt="Deck 120 - Decathlon - 8,5">
+              <img src="img/deck120_850.jpg?quality=70&interlace=true&format=auto" alt="Deck 120 - Decathlon - 8,5">
             </figure>
           </div>
 
@@ -357,7 +357,7 @@
         <div class="col-md-2 product ">
           <div class=" product_img">
             <figure>
-              <img src="img/deck120_875.jpg" alt="Deck 120 - Decathlon - 8,75">
+              <img src="img/deck120_875.jpg?quality=70&interlace=true&format=auto" alt="Deck 120 - Decathlon - 8,75">
             </figure>
           </div>
 
@@ -378,19 +378,19 @@
 
           <div class="col-md-6 left" >
             <figure class="product_img 775">
-              <img src="img/deck120_775.jpg" alt="7,75 Deck 100 Skateboard">
+              <img src="img/deck120_775.jpg?quality=70&interlace=true&format=auto" alt="7,75 Deck 100 Skateboard">
             </figure>
             <figure class="product_img 800">
-              <img src="img/deck120_800.jpg" alt="7,75 Deck 100 Skateboard">
+              <img src="img/deck120_800.jpg?quality=70&interlace=true&format=auto" alt="7,75 Deck 100 Skateboard">
             </figure>
             <figure class="product_img 825">
-              <img src="img/deck120_825.jpg" alt="7,75 Deck 100 Skateboard">
+              <img src="img/deck120_825.jpg?quality=70&interlace=true&format=auto" alt="7,75 Deck 100 Skateboard">
             </figure>
             <figure class="product_img 850">
-              <img src="img/deck120_850.jpg" alt="7,75 Deck 100 Skateboard">
+              <img src="img/deck120_850.jpg?quality=70&interlace=true&format=auto" alt="7,75 Deck 100 Skateboard">
             </figure>
             <figure class="product_img 875">
-              <img src="img/deck120_875.jpg" alt="7,75 Deck 100 Skateboard">
+              <img src="img/deck120_875.jpg?quality=70&interlace=true&format=auto" alt="7,75 Deck 100 Skateboard">
             </figure>
             <div class="product_price">
               <span>35€</span>
@@ -434,22 +434,22 @@
     <div class="container_fluid photos">
       <div class="row">
         <figure id="photo_1">
-          <img src="img/highway.jpg" alt="">
+          <img src="img/highway.jpg?quality=70&interlace=true&format=auto" alt="">
         </figure>
         <figure id="photo_2">
-          <img src="img/bowl.jpg" alt="">
+          <img src="img/bowl.jpg?quality=70&interlace=true&format=auto" alt="">
         </figure>
         <figure id="photo_3">
-          <img src="img/wzm6x7.jpg" alt="">
+          <img src="img/wzm6x7.jpg?quality=70&interlace=true&format=auto" alt="">
         </figure>
         <figure id="photo_4">
-          <img src="img/wzm.jpg" alt="">
+          <img src="img/wzm.jpg?quality=70&interlace=true&format=auto" alt="">
         </figure>
         <figure id="photo_5">
-          <img src="img/alexis_thomas_roues_029.jpg" alt="">
+          <img src="img/alexis_thomas_roues_029.jpg?quality=70&interlace=true&format=auto" alt="">
         </figure>
         <figure id="photo_6">
-          <img src="img/fish.jpg" alt="">
+          <img src="img/fish.jpg?quality=70&interlace=true&format=auto" alt="">
         </figure>
       </div>
 
@@ -468,7 +468,7 @@
       <div class="col-md-6 product_img">
 
         <figure>
-          <img src="img/vulca500.png" alt="">
+          <img src="img/vulca500.png?quality=70&interlace=true&format=auto" alt="">
         </figure>
       </div>
       <div class="col-md-6 product_info">
@@ -486,7 +486,7 @@
     <div class="row product">
       <div class="col-md-6 product_img">
         <figure>
-          <img src="img/crush500.png" alt="">
+          <img src="img/crush500.png?quality=70&interlace=true&format=auto" alt="">
         </figure>
       </div>
       <div class="col-md-6 product_info">
