Assets folder + imgs

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="row product_slide roues">
           <div class="col-md-6 left" >
             <figure class="product_img">
-              <img src="assets/img/roues.png?quality=70&interlace=true&format=auto" alt="8,5 Skateboard">
+              <img src="assets/img/roues.jpg?quality=70&interlace=true&format=auto" alt="8,5 Skateboard">
             </figure>
             <div class="product_price">
               <span>20€</span>
