Retour Fred/Margot

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
               <img src="assets/img/8,75.jpg?quality=70&interlace=true&format=auto" alt="8,75 Deck 100 Skateboard">
             </figure>
             <div class="product_price">
-              <span>99€</span>
+              <span>25€</span>
             </div>
             <div class="product-cta">
               <a class="dp_cta" href="https://www.decathlon.fr/C-851616-planches-et-pieces-detachees/N-537570-type-de-produit~deck/N-537586-prix~de-25-a-30~euros?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco">Acheter le produit</a>
@@ -427,7 +427,7 @@
 
             </div>
             <div class="product_video">
-              <iframe src="https://www.youtube.com/embed/Crlir9i6vcU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe src="https://www.youtube.com/embed/7Xp_YDwMFLo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
           </div>
