--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </div>
 
             <div class="product-cta">
-              <a class="dp_cta" href="https://www.decathlon.fr/C-932201-accessoires?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco">Acheter le produit</a>
+              <a class="dp_cta" href="https://www.decathlon.fr/C-932201-accessoires?opeco=opeco:Page-Sport-page-sport_PRODUIT-TECHNIQUE-GammeSkate&type=opeco">Acheter les produits</a>
             </div>
           </div>
 
